--- a/unittests_in_js/package.json
+++ b/unittests_in_js/package.json
@@ -2,7 +2,7 @@
   "name": "unittest_in_js",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "1-calcul.js",
   "scripts": {
     "lint": "./node_modules/.bin/eslint",
     "check-lint": "lint [0-9]*.js",
