--- a/unittests_in_js/package.json
+++ b/unittests_in_js/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "./node_modules/.bin/eslint",
     "check-lint": "lint [0-9]*.js",
-    "test": "mocha test.js",
+    "test": "mocha",
     "dev": "nodemon --exec babel-node --presets @babel/preset-env"
   },
   "author": "",
